--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -86,23 +86,24 @@
         <div class="loaded">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-lg-8 col-md-8 col-sm-12">
                             <h2>
                                 <strong>
-                                    Ranking de recaudaci&oacute;n {{ year }}
+                                    Recaudaci&oacute;n perc&aacute;pita, presupuesto 
                                     {% if periodo_list|keyvalue:year == 'F' %}
-                                        cierre
+                                        de cierre
                                     {% elif periodo_list|keyvalue:year == 'A' %}
                                         intermedio
                                     {% elif periodo_list|keyvalue:year == 'I' %}
                                         inicial
                                     {% endif %}
+				    {{ year }}
                                 </strong>
                                 <br>
                                 {% if mi_clase.clasificacion %}
-                                    por habitante categor&iacute;a municipal "{{ mi_clase.clasificacion }}"
+                                    grupo "{{ mi_clase.clasificacion }}"
                                 {% else %}
-                                    según categor&iacute;a de municipios
+                                    por grupos de municipios
                                 {% endif %}
                             </h2>
                             <h5>C&oacute;rdobas corrientes por habitante {% if periodo_list|keyvalue:year == 'I' %}en
@@ -149,7 +150,13 @@
                             <thead>
 			        <tr>
 				    <td colspan="3">
-		    			<h4>Ranking de recaudación por habitante
+		    			<h4>Recaudaci&oacute;n perc&aacute;pita presupuesto
+					  {% if periodo_list|keyvalue:year == 'F' %}de cierre
+					  {% elif periodo_list|keyvalue:year == 'A' %} intermedio
+					  {% else %}inicial
+					  {% endif %}
+					  {{ year}}
+					  por grupos de municipios
 					  {% descargar_excel "oim3" %}
                         		</h4>
 		                        <h5>
@@ -166,27 +173,22 @@
                                     </td>
                                 </tr>
                                 <tr class="blanco pma-bg-blue">
-                                    <th rowspan="2" colspan="1" style="vertical-align: middle">Categor&iacute;a de
+                                    <th rowspan="2" style="vertical-align: middle">Grupo de
                                         municipio
                                     </th>
-                                    <th rowspan="1" colspan="2" style="border-bottom: none;" class="text-center">
-                                        {% if periodo_list|keyvalue:year == 'I' %}
-                                           Presupuestado
-                                        {% else %}
-                                            Ejecutado
-                                        {% endif %}
+                                    <th rowspan="1" style="border-bottom: none;" class="text-center">
+                                           P. Inicial
                                     </th>
-                                </tr>
-                                <tr class="blanco pma-bg-blue">
-                                    <th colspan="1" class="no-border-top text-right">C&oacute;rdobas</th>
-                                    <th colspan="1" class="no-border-top text-right">%</th>
+                                    <th rowspan="1" style="border-bottom: none;" class="text-center">
+					    {% if periodo_list|keyvalue:year == 'A' %}P. Intermedio{% else %}P. Cierre{% endif %}
+                                    </th>
+                                    <th class="no-border-top text-right">%</th>
                                 </tr>
                             </thead>
                             <tbody>
                             {% for row in porclasep %}
                                 <tr class="pma-bg-white">
                                     <td colspan="1" class="text-center">{{ row.clasificacion }}</td>
-                                    {% if periodo_list|keyvalue:year == 'I' %}
                                         <td class="text-right">
                                             {% if row.asignado %}
                                                 {{ row.asignado|floatformat:2|intcomma }}
@@ -195,42 +197,34 @@
                                             {% endif %}
                                         </td>
                                         <td class="text-right">
-                                            {% if row.asignado_percent %}
-                                                {{ row.asignado_percent|floatformat:1|intcomma }}
+					    {% if periodo_list|keyvalue:year == 'I' %}
+					        0
                                             {% else %}
-                                                0
-                                            {% endif %}
-                                        </td>
-                                    {% else %}
-                                        <td class="text-right">
-                                            {% if row.ejecutado %}
-                                                {{ row.ejecutado|floatformat:2|intcomma }}
-                                            {% else %}
-                                                0
+                                                {{ row.ejecutado|floatformat:2|intcomma|default:0 }}
                                             {% endif %}
                                         </td>
                                         <td class="text-right">
-                                            {% if row.ejecutado_percent %}
-                                                {{ row.ejecutado_percent|floatformat:1|intcomma }}
-                                            {% else %}
-                                                0
-                                            {% endif %}
+					    {% if periodo_list|keyvalue:year == 'I' %}
+					        0
+					    {% elif periodo_list|keyvalue:year == 'A' %}
+                                                    {{ row.asignado_percent|floatformat:1|intcomma|default:0 }}
+				     	    {% else %}
+					        {{ row.ejecutado_percent|floatformat:1|intcomma|default:0 }}
+					    {% endif %}
                                         </td>
-                                    {% endif %}
                                 </tr>
                             {% endfor %}
                             <tr class="pma-bg-white">
                                 <th colspan="1">Media Nacional</th>
-                                {% if periodo_list|keyvalue:year == 'I' %}
                                     <td class="text-right">
                                         {{ total_asignado_ranking|floatformat:2|intcomma }}
                                     </td>
+                                {% if periodo_list|keyvalue:year == 'A' %}
                                     <td class="text-right">{{ total_asignado_ranking_porcentaje|floatformat:0 }}</td>
-                                {% else %}
+                                {% elif periodo_list|keyvalue:year == 'F' %}
                                     <td class="text-right">
                                         {{ total_ejecutado_ranking|floatformat:2|intcomma }}
                                     </td>
-                                    <td class="text-right">{{ total_ejecutado_ranking_porcenteje|floatformat:0 }}</td>
                                 {% endif %}
                             </tr>
                             </tbody>
